--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </style>
 </head>
 
-<body class="manrope-font max-w-screen-xl mx-auto">
-    <header>
+<body class="manrope-font">
+    <header class=" max-w-screen-xl mx-auto">
         <!-- navbar -->
         <nav class="my-12">
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="flex justify-between">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -43,10 +43,12 @@
                         </ul>
                     </div>
                     <div class="text-3xl font-extrabold flex items-center space-x-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-[#ABEF5F] rounded-full">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                            </svg>
-                       <h2> Rinterio</h2>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-5 bg-[#ABEF5F] rounded-full">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg>
+                        <h2> Rinterio</h2>
                     </div>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -77,9 +79,11 @@
                     </button>
 
                     <button class="btn bg-[#ABEF5F] font-extrabold rounded-3xl">Book Consult
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-black text-white rounded-full">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                        </svg>                          
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-5 bg-black text-white rounded-full">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg>
                     </button>
                 </div>
             </div>
@@ -87,24 +91,110 @@
         <!-- banner -->
         <section>
             <div class="hero">
-                <div class="hero-content text-center flex-col">
-                  <img src="assets/banner.png" class="">
-                  <div>
-                    <h1 class="text-6xl font-extrabold ">A barn house of this design has a <br>striking appearance</h1>
-                    <p class="py-6 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
-                    </p>
-                    <button class="btn bg-[#ABEF5F80] font-extrabold rounded-3xl">View Details
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 bg-[#ABEF5F] rounded-full">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
-                        </svg>                          
-                    </button>
-                  </div>
+                <div class="hero-content lg:text-center flex-col p-4">
+                    <img src="assets/banner.png" class="">
+                    <div>
+                        <h1 class="lg:text-6xl text-3xl font-extrabold ">A barn house of this design has a <br>striking
+                            appearance</h1>
+                        <p class="py-6 ">The barn house captivates with its blend of rustic charm and modern
+                            sophistication, featuring weathered wood, sleek metal accents, and large windows that flood
+                            the space with natural light.
+                        </p>
+                        <button class="btn bg-[#ABEF5F80] font-extrabold rounded-3xl w-full lg:w-52">View Details
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5 bg-[#ABEF5F] rounded-full">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
-              </div>
+            </div>
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <!-- About us and Works process section -->
+        <section class="bg-gray-100 space-y-20 p-5">
+
+            <!-- about-us div -->
+            <div class="max-w-screen-xl mx-auto">
+                <img src="assets/Vector.png" alt="" class="lg:-ml-12">
+                <div class="flex flex-col gap-5 lg:flex-row lg:justify-between">
+
+                    <!-- about-us contents -->
+                    <div class="space-y-6">
+                        <button class="btn bg-white">About Us</button>
+                        <h2 class="text-5xl font-bold">We design thoughtful,<br> liveable spaces</h2>
+                        <p>The barn house captivates with its blend of rustic charm and <br> modern sophistication,
+                            featuring weathered wood, sleek metal accents.</p>
+
+                        <!-- small card-1 -->
+                        <div class="bg-white flex p-5 rounded-2xl">
+                            <img src="assets/commercial.png" alt="">
+                            <div class="ml-4">
+                                <h6 class="text-xl font-extrabold">Commercial</h6>
+                                <p>The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                            </div>
+                        </div>
+
+                        <!-- small card- -->
+                        <div class="bg-white flex p-5 rounded-2xl">
+                            <img src="assets/residential.png" alt="">
+                            <div class="ml-4">
+                                <h6 class="text-xl font-extrabold">Residential</h6>
+                                <p>The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- about-us image  -->
+                    <div class="rounded-2xl">
+                        <img src="assets/Rectangle.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <!-- works process -->
+             <div class="max-w-screen-xl mx-auto space-y-4">
+                <p class="bg-white w-[120px] rounded-2xl mx-auto p-2">How we works</p>
+                <h4 class="text-center text-5xl font-bold">Our Works Process</h4>
+                <p class="text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                
+                <!-- cards -->
+                 <div class="grid lg:grid-cols-4 grid-cols-1 gap-6">
+                    <!-- card-1 -->
+                     <div class="bg-[#E7C1D3] rounded-3xl p-6 space-y-2">
+                        <img src="assets/concept.png" alt="">
+                        <h6 class="font-extrabold text-xl">Concept</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                     </div>
+
+                    <!-- card-2 -->
+                     <div class="bg-[#EFDA6E] rounded-3xl p-6 space-y-2">
+                        <img src="assets/flow-chart.png" alt="">
+                        <h6 class="font-extrabold text-xl">Design Process</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                     </div>
+
+                    <!-- card-3 -->
+                     <div class="bg-[#A4DAC3] rounded-3xl p-6 space-y-2">
+                        <img src="assets/vision.png" alt="">
+                        <h6 class="font-extrabold text-xl">Supervision</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                     </div>
+                     
+                    <!-- card-4 -->
+                     <div class="bg-[#77AAEA] rounded-3xl p-6 space-y-2">
+                        <img src="assets/budget-planning.png" alt="">
+                        <h6 class="font-extrabold text-xl">Budget Planning</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                     </div>
+                 </div>
+             </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
