--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="flex flex-col gap-5 lg:flex-row lg:justify-between">
 
                     <!-- about-us contents -->
-                    <div class="space-y-6">
+                    <div class="space-y-6 text-center lg:text-left">
                         <button class="btn bg-white">About Us</button>
                         <h2 class="text-5xl font-bold">We design thoughtful,<br> liveable spaces</h2>
                         <p>The barn house captivates with its blend of rustic charm and <br> modern sophistication,
@@ -157,42 +157,73 @@
             </div>
 
             <!-- works process -->
-             <div class="max-w-screen-xl mx-auto space-y-4">
+            <div class="max-w-screen-xl mx-auto space-y-4">
                 <p class="bg-white w-[120px] rounded-2xl mx-auto p-2">How we works</p>
                 <h4 class="text-center text-5xl font-bold">Our Works Process</h4>
-                <p class="text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
-                
+                <p class="text-center">The barn house captivates with its blend of rustic charm and modern
+                    sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+
                 <!-- cards -->
-                 <div class="grid lg:grid-cols-4 grid-cols-1 gap-6">
+                <div class="grid lg:grid-cols-4 grid-cols-1 gap-6">
                     <!-- card-1 -->
-                     <div class="bg-[#E7C1D3] rounded-3xl p-6 space-y-2">
+                    <div class="bg-[#E7C1D3] rounded-3xl p-6 space-y-2">
                         <img src="assets/concept.png" alt="">
                         <h6 class="font-extrabold text-xl">Concept</h6>
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
-                     </div>
+                    </div>
 
                     <!-- card-2 -->
-                     <div class="bg-[#EFDA6E] rounded-3xl p-6 space-y-2">
+                    <div class="bg-[#EFDA6E] rounded-3xl p-6 space-y-2">
                         <img src="assets/flow-chart.png" alt="">
                         <h6 class="font-extrabold text-xl">Design Process</h6>
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
-                     </div>
+                    </div>
 
                     <!-- card-3 -->
-                     <div class="bg-[#A4DAC3] rounded-3xl p-6 space-y-2">
+                    <div class="bg-[#A4DAC3] rounded-3xl p-6 space-y-2">
                         <img src="assets/vision.png" alt="">
                         <h6 class="font-extrabold text-xl">Supervision</h6>
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
-                     </div>
-                     
+                    </div>
+
                     <!-- card-4 -->
-                     <div class="bg-[#77AAEA] rounded-3xl p-6 space-y-2">
+                    <div class="bg-[#77AAEA] rounded-3xl p-6 space-y-2">
                         <img src="assets/budget-planning.png" alt="">
                         <h6 class="font-extrabold text-xl">Budget Planning</h6>
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
-                     </div>
-                 </div>
-             </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- portfolio section -->
+        <section></section>
+
+        <!-- let's discuss section  -->
+        <section class="bg-[url('assets/bg.jpg')] m-3 lg:py-24 p-4">
+            <div class="max-w-screen-xl mx-auto text-center space-y-6 ">
+                <p class="bg-[#ABEF5F33] w-[120px] rounded-2xl mx-auto p-2">Let’s Connect</p>
+                <h3 class="font-bold text-4xl">Let’s Discuss Next Project</h3>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring
+                    weathered wood, sleek metal accents.</p>
+
+                <!-- Discuss Form -->
+                <form action="" class="space-y-4 space-x-2">
+                    <input type="text" placeholder="First Name*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Last Name*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Phone Number*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Email Number*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <textarea class="lg:w-4/5 w-full h-60 rounded-3xl p-2" placeholder="Write your message here"></textarea>
+                    <button class="btn bg-[#ABEF5F] font-extrabold rounded-3xl lg:w-4/5 w-full">Send Mail
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-5 bg-black text-white rounded-full">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
+
         </section>
     </main>
 
