footer section done

--- a/index.html
+++ b/index.html
@@ -209,11 +209,16 @@
 
                 <!-- Discuss Form -->
                 <form action="" class="space-y-4 space-x-2">
-                    <input type="text" placeholder="First Name*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
-                    <input type="text" placeholder="Last Name*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
-                    <input type="text" placeholder="Phone Number*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
-                    <input type="text" placeholder="Email Number*" class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
-                    <textarea class="lg:w-4/5 w-full h-60 rounded-3xl p-2" placeholder="Write your message here"></textarea>
+                    <input type="text" placeholder="First Name*"
+                        class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Last Name*"
+                        class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Phone Number*"
+                        class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <input type="text" placeholder="Email Number*"
+                        class="input input-bordered lg:w-2/5 w-full rounded-3xl" />
+                    <textarea class="lg:w-4/5 w-full h-60 rounded-3xl p-2"
+                        placeholder="Write your message here"></textarea>
                     <button class="btn bg-[#ABEF5F] font-extrabold rounded-3xl lg:w-4/5 w-full">Send Mail
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-5 bg-black text-white rounded-full">
@@ -227,7 +232,33 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="bg-black lg:py-24 p-4">
+        <div class="max-w-screen-xl mx-auto text-center space-y-6">
+            <div class="text-3xl font-extrabold flex justify-center items-center space-x-2">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5 bg-[#ABEF5F] rounded-full">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+                <h2 class="text-white">Rinterio</h2>
+            </div>
+            <p class="text-white">The barn house captivates with its blend of rustic charm and modern sophistication,
+                <br> featuring weathered
+                wood, sleek metal accents.</p>
+            <div class="grid lg:grid-cols-5 grid-cols-1 text-white space-y-2">
+                <p>Home</p>
+                <p>Services</p>
+                <p>Portfolio</p>
+                <p>Blogs</p>
+                <p>Contact Us</p>
+            </div>    
+            <button class="btn bg-[#ABEF5F] font-extrabold rounded-3xl">Book Consult
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5 bg-black text-white rounded-full">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                </svg>
+            </button>
+        </div>
+    </footer>
 </body>
 
 </html>
