new section added

--- a/index.html
+++ b/index.html
@@ -289,6 +289,32 @@
             </div>
 
         </section>
+
+        <!-- Q & A -->
+         <section class="max-w-screen-xl mx-auto p-5 lg:py-24 space-y-4">
+            <h5 class="font-extrabold text-5xl text-center">Frequently Asked Question</h5>
+            <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">Price is Affordable?</div>
+                <div class="collapse-content">
+                  <p>Yes!!!</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">Can we change own decoration?</div>
+                <div class="collapse-content">
+                  <p>Yes!!</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">Can i change floors?</div>
+                <div class="collapse-content">
+                  <p>No!!</p>
+                </div>
+              </div>
+         </section>
     </main>
 
     <footer class="bg-black lg:py-24 p-4">
